--- a/index.html
+++ b/index.html
@@ -1,9 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="title"
+      content="Ross Foundation - Construction, Energy, and Innovative Solutions"
+    />
+    <meta
+      name="description"
+      content="Ross Foundation is a leading construction company with over 10 years of experience, specializing in modern business centers and residential complexes in Tashkent. Discover our projects, news, and career opportunities."
+    />
+    <meta
+      name="keywords"
+      content="Ross Foundation, construction company, Tashkent, business centers, residential complexes, innovative solutions, real estate, vacancies"
+    />
+    <meta name="author" content="Ross Foundation" />
+    <meta
+      name="title"
+      content="Ross Foundation - Qurilish, Energetika va Innovatsion Yechimlar"
+    />
+    <meta
+      name="description"
+      content="Ross Foundation - 10 yillik tajribaga ega yetakchi qurilish kompaniyasi. Toshkentda zamonaviy biznes markazlari va turar-joy majmualarini qurish bo‘yicha ishonchli hamkor. Loyihalarimiz, yangiliklar va vakansiyalar bilan tanishing."
+    />
+    <meta
+      name="keywords"
+      content="Ross Foundation, qurilish kompaniyasi, Toshkent, biznes markazlari, turar-joy majmualari, innovatsion yechimlar, ko‘chmas mulk, vakansiyalar"
+    />
+    <meta name="author" content="Ross Foundation" />
+    <meta
+      name="title"
+      content="Ross Foundation - Строительство, Энергетика и Инновационные Решения"
+    />
+    <meta
+      name="description"
+      content="Ross Foundation - ведущая строительная компания с более чем 10-летним опытом, специализирующаяся на современных бизнес-центрах и жилых комплексах в Ташкенте. Ознакомьтесь с нашими проектами, новостями и вакансиями."
+    />
+    <meta
+      name="keywords"
+      content="Ross Foundation, строительная компания, Ташкент, бизнес-центры, жилые комплексы, инновационные решения, недвижимость, вакансии"
+    />
+    <meta name="author" content="Ross Foundation" />
     <title>Ross Foundation</title>
   </head>
   <body>
