--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     />
     <meta
       name="description"
-      content="RAI GROUP is a leading construction company with over 10 years of experience, specializing in modern business centers and residential complexes in Tashkent. Discover our projects, news, and career opportunities."
+      content="RAI GROUP is a leading construction company with over 6 years of experience, specializing in modern business centers and residential complexes in Tashkent. Discover our projects, news, and career opportunities."
     />
     <meta
       name="keywords"
       content="RAI GROUP, construction company, Tashkent, business centers, residential complexes, innovative solutions, real estate, vacancies"
     />
-    <meta name="author" content="Ross Foundation" />
+    <meta name="author" content="Rai Group" />
     <meta
       name="title"
       content="RAI GROUP - Qurilish, Energetika va Innovatsion Yechimlar"
@@ -29,7 +29,7 @@
       name="keywords"
       content="RAI GROUP, qurilish kompaniyasi, Toshkent, biznes markazlari, turar-joy majmualari, innovatsion yechimlar, ko‘chmas mulk, vakansiyalar"
     />
-    <meta name="author" content="Ross Foundation" />
+    <meta name="author" content="Rai Group" />
     <meta
       name="title"
       content="RAI GROUP - Строительство, Энергетика и Инновационные Решения"
@@ -42,7 +42,7 @@
       name="keywords"
       content="RAI GROUP, строительная компания, Ташкент, бизнес-центры, жилые комплексы, инновационные решения, недвижимость, вакансии"
     />
-    <meta name="author" content="Ross Foundation" />
+    <meta name="author" content="Rai Group" />
     <title>RAI GROUP</title>
   </head>
   <body>
